# aresforge

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.agent/: AGENT_REGISTRY.md
.aresforge/: dispatch_approval_gates.json
config/: README.md  managed_repositories.json
migrations/: 0001_initial_schema.sql  0002_m15_autonomous_run_queue.sql  0003_m16_autonomous_run_pr_linkage.sql  0004_roadmap_control_schema.sql  0005_roadmap_work_item_bridge.sql  0006_work_item_queue_approvals.sql
scripts/: Invoke-AresForgePrLifecycle.ps1
tests/: test_active_project_workspace.py  test_agent_orchestration_plan_builder.py  test_agent_queue_planning.py  test_agent_registry.py  test_agent_route_recommendation.py  test_agent_runtime_boundary.py  test_agent_step_result_normalization.py  test_approval_gated_patch_intake.py  test_artifact_discovery.py  test_artifacts.py  test_auto_complete_safe_queue_item.py  test_automatic_canonical_evidence_emission_contract.py  test_autonomous_cycle.py  test_autonomous_sprint_closeout.py  test_batch_closeout_planner.py  test_batch_readiness_report.py  test_canonical_evidence_marker_contract.py  test_canonical_evidence_markers.py  test_child_closeout_evidence_bundle.py  test_child_closeout_script_generator.py  test_child_evidence_marker_preflight.py  test_child_evidence_marker_template.py  test_child_execution_gates.py  test_cli.py  test_cli_doc_reconciliation.py  test_cli_github_sync_planner.py  test_cli_handoff_package.py  test_cli_hub_server.py  test_cli_local_agent_orchestration.py  test_cli_local_agent_profiles.py  (+182 more)
(+418 files in other folders)
